@@ -3,6 +3,11 @@
 
 1.3 - not yet
 
+  * BJH: Make Curl do cookies (session only) and persistent connections.
+    This is only for calls through the synchronous interface, and the
+    synchronous interface is no longer thread safe -- you can have only
+    one thread making calls through it.
+
   * BJH: Add Curl SSL_NO_VERIFYPEER, SSL_NO_VERIFYHOST control.
 
   * BJH: Break up 'rpctest', rename to 'test'.
